# chocolate_milk

bootloader/src/: asm_routines.asm
kernel/: Cargo.toml
kernel/src/: corpus.rs  main.rs  mutate.rs  netlink.rs  panic.rs  progress_set.rs  snapshotted_app.rs  vtx.rs
kernel/src/net/: netmapping.rs
server/: Cargo.toml
server/src/: main.rs
shared/falktp/src/: lib.rs
shared/lockcell/src/: lib.rs
