[package]
name = "kernel"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_reqs = { path = "../shared/core_reqs" }
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }
boot_args = { path = "../shared/boot_args" }
page_table = { path = "../shared/page_table" }
rangeset = { path = "../shared/rangeset" }
lockcell = { path = "../shared/lockcell" }
noodle = { path = "../shared/noodle" }
falktp = { path = "../shared/falktp" }
aht = { path = "../shared/aht" }
hashbrown = { version = "0.7.0", default-features = false }


[profile.release]
panic = "abort"
opt-level = 2
debug = true
# lto = "fat" # triggers "brackets expression not supported on this target" for inline asm!?

[profile.dev]
panic = "abort"
debug = true

